# StacksExchange

.github/workflows/: rust.yml
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx
client/src/components/Groups/: Groups.tsx
client/src/components/Navigation/: NavigationBar.tsx  Panels.tsx
client/src/components/Settings/: Settings.tsx
client/src/components/Transactions/: Transactions.tsx
server/: .gitignore  Cargo.toml  Procfile  README.md  RustConfig  build.rs
server/conf/: default.toml
server/migrations/2020-06-27-231312_create_user/: down.sql  up.sql
server/migrations/2020-08-01-181305_create_squad/: down.sql  up.sql
server/migrations/2020-12-26-215032_add_balance/: down.sql  up.sql
server/migrations/2020-12-26-215032_create_balance/: down.sql  up.sql
server/migrations/2020-12-27-024015_create_transaction/: down.sql  up.sql
server/src/: app.rs  auth.rs  googlesignin.rs  graphql.rs  lib.rs  main.rs  settings.rs
server/src/db/: mod.rs  models.rs  schema.patch  schema.rs  schema.rs.orig
server/src/googlesignin/: cache.rs  googlesigninerror.rs  mod.rs
server/src/graphql/: mod.rs  mutation_root.rs  page_info.rs  query_root.rs
server/src/graphql/edges/: balance_transaction.rs  mod.rs  person_balance.rs  person_squad.rs  squad_balance.rs  squad_member.rs  squad_transaction.rs  transaction_balance.rs  util.rs
server/src/graphql/mutations/: add_person_to_squad.rs  mod.rs  new_person.rs  new_squad.rs  new_transaction.rs
server/src/graphql/nodes/: balance.rs  mod.rs  node.rs  person.rs  squad.rs  transaction.rs
server/static/: asset-manifest.json  index.html  precache-manifest.e7c9d6396d5a6c7fea4c7c2bd312aec8.js  service-worker.js
server/static/static/js/: 2.1e82fbae.chunk.js  2.1e82fbae.chunk.js.map  main.19b66205.chunk.js  main.19b66205.chunk.js.map
