[package]
name = "stacks-exchange"
version = "0.1.0"
authors = ["David Simon <D@vidSimon.tech>", "Vikram Shanker <vikram@vikramshanker.com", "Om Kelkar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5"
actix-identity = "0.2.1"
actix-web = "3.3"
actix-rt = "1"
anyhow = "1"
async-graphql = "2.4"
async-graphql-actix-web = "2.4"
bytes = "^0.5"
cache_control = "0.1.0"
config = "0.10"
diesel = { version = "1.4.5", features = [ "postgres", "r2d2", "uuidv07" ]}
diesel-derive-enum = { version = "1", features = [ "postgres" ]}
dotenv = "0.15"
futures = "0.3.4"
hyper = "^0.13"
hyper-rustls = { version = "^0.19"}
jsonwebtoken = "^7"
listenfd = { version = "0.3", optional = true }
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
structopt = "0.3"
tokio-diesel = "0.3"
uuid = { version = "0.8", features = [ "v4" ] }

[features]
autoreload = ["listenfd"]
graphiql = []
